# image_recognition

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  dependencies.rosinstall  package.xml  plugin.xml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
image_recognition/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
image_recognition/image_recognition_yolo/: Yolo_v8.ipynb
image_recognition/image_recognition_yolo/src/: model.py  modules.py  tal.py
image_recognition_age_gender/: CMakeLists.txt  package.xml  rosdoc.yaml  setup.py
image_recognition_age_gender/scripts/: download_model  face_properties_node  get_face_properties
image_recognition_age_gender/src/image_recognition_age_gender/: age_gender_estimator.py
image_recognition_age_gender/test/: run_tests.bash  test_face_properties.py
image_recognition_analysis/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_analysis/scripts/: classifier_metrics
image_recognition_analysis/src/image_recognition_analysis/: __init__.py  plots.py
image_recognition_color_extractor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_color_extractor/scripts/: color_extractor_node  get_colors  get_colors_stream
image_recognition_color_extractor/src/image_recognition_color_extractor/: __init__.py  color_extractor.py  color_extractor_wrapper.py
image_recognition_color_extractor/src/image_recognition_color_extractor/color_extractor/: image_to_color.py
image_recognition_face_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_face_recognition/scripts/: face_recognition_node  get_face_recognition  train_from_images
image_recognition_face_recognition/src/image_recognition_face_recognition/: face_recognizer.py  facenet_recognition.py  test.py
image_recognition_face_recognition/test/: test_face_recognizer.py  test_import.py
image_recognition_footwear/: CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_footwear/scripts/: get_footwear
image_recognition_footwear/src/image_recognition_footwear/: __init__.py  model.py  process_data.py
image_recognition_footwear/test/: run_tests.bash  test_footwear.py
image_recognition_jetson/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
image_recognition_jetson/launch/: static_kinect.launch  static_kinect_coco_bottle.launch  static_kinect_faces.launch  static_kinect_multi_pedestrians.launch  static_kinect_pedestrians.launch
image_recognition_jetson/scripts/: install_jetson_inference.bash
image_recognition_jetson/src/: detect_net.h
image_recognition_keras/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_keras/scripts/: download_model  face_properties_node  get_face_properties
image_recognition_keras/src/image_recognition_keras/: __init__.py  age_gender_estimator.py  wide_resnet.py
image_recognition_keras/test/: test_face_properties.py
image_recognition_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
image_recognition_msgs/msg/: Annotation.msg  BodypartDetection.msg  CategoricalDistribution.msg  CategoryProbability.msg  FaceProperties.msg  People.msg  Person.msg  PersonDetection.msg  Recognition.msg  Recognitions.msg
image_recognition_msgs/srv/: Annotate.srv  DetectPeople.srv  ExtractColor.srv  ExtractColour.srv  GetFaceProperties.srv  GetPersons.srv  Recognize.srv
image_recognition_openface/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_openface/scripts/: face_recognition_node  get_face_recognition
image_recognition_openface/src/image_recognition_openface/: face_recognizer.py  facenet_recognition.py  requirements.txt
image_recognition_openpose/: .dockerignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py
image_recognition_openpose/scripts/: detect_poses  openpose_node
image_recognition_openpose/src/: openpose_ros_node.cpp  yolo_wrapper.py
image_recognition_openpose/src/image_recognition_openpose/: __init__.py  openpose_models.py  openpose_wrapper.py  openpose_wrapper2.py
image_recognition_openpose/test/: test.cpp
image_recognition_people_detector/: CMakeLists.txt  (+2 more)
image_recognition_pose_estimation/: CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_pose_estimation/scripts/: detect_poses  pose_estimation_node
image_recognition_pose_estimation/src/image_recognition_pose_estimation/: __init__.py  body_parts.py  yolo_pose_wrapper.py
image_recognition_pose_estimation/test/: test_import.py
image_recognition_rqt/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
image_recognition_rqt/scripts/: annotation_gui  folder_image_publisher  label_gui  manual_gui  test_gui
image_recognition_rqt/src/image_recognition_rqt/: annotation.py  dialogs.py  folder_image_publisher.py  image_widget.py  label.py  manual.py  test.py
image_recognition_segment_anything/: CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_segment_anything/scripts/: test.py
image_recognition_skybiometry/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_skybiometry/scripts/: face_properties_node  get_face_properties
image_recognition_skybiometry/src/image_recognition_skybiometry/: __init__.py  face_client.py  multipart.py  skybiometry.py  timeout.py
image_recognition_skybiometry/src/image_recognition_skybiometry/face_client/: __init__.py  face_client.py
image_recognition_skybiometry/test/: test_face_properties.py
image_recognition_tensorflow/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_tensorflow/scripts/: evaluate_classifier  get_object_recognition  object_recognition_node  retrain
image_recognition_tensorflow/src/image_recognition_tensorflow/: MovingAvgQuantize.py  evaluate_classifier.py  object_recognizer.py  retrain.py  tf_retrain.py  utils.py
image_recognition_tensorflow/test/: all.test  test_retrain_and_evaluate.py
(+132 files in other folders)
