<?xml version="1.0"?>
<package>
  <name>tensorflow_object_recognition</name>
  <version>0.0.0</version>
  <description>The tensorflow_object_recognition package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>object_recognition_srvs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>object_recognition_srvs</run_depend>

</package>
