<?xml version="1.0"?>
<package format="2">
  <name>image_recognition</name>
  <version>0.0.4</version>
  <description>The image_recognition package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-lint</build_depend>

  <exec_depend>image_recognition_analysis</exec_depend>
  <exec_depend>image_recognition_keras</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>image_recognition_openface</exec_depend>
  <exec_depend>image_recognition_openpose</exec_depend>
  <exec_depend>image_recognition_rqt</exec_depend>
  <exec_depend>image_recognition_skybiometry</exec_depend>
  <exec_depend>image_recognition_tensorflow</exec_depend>
  <exec_depend>image_recognition_tensorflow_rqt</exec_depend>
  <exec_depend>image_recognition_util</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
