<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_recognition</name>
  <version>0.0.5</version>
  <description>The image_recognition packages for extracting recognitions from images.</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_recognition_age_gender</exec_depend>
  <exec_depend>image_recognition_analysis</exec_depend>
  <exec_depend>image_recognition_color_extractor</exec_depend>
  <exec_depend>image_recognition_face_recognition</exec_depend>
  <exec_depend>image_recognition_footwear</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>image_recognition_openface</exec_depend>
  <exec_depend>image_recognition_pose_estimation</exec_depend>
  <exec_depend>image_recognition_rqt</exec_depend>
  <exec_depend>image_recognition_skybiometry</exec_depend>
  <exec_depend>image_recognition_tensorflow</exec_depend>
  <exec_depend>image_recognition_tensorflow_rqt</exec_depend>
  <exec_depend>image_recognition_util</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
