<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_analysis</name>
  <version>0.0.5</version>
  <description>The image_recognition_analysis package</description>

  <author email="loy.vanbeek@gmail.com">Loy van Beek</author>
  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tue-robotics/image_recognition/tree/master/image_recognition_analysis</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_recognition_util</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>

  <test_depend>python-catkin-lint</test_depend>
</package>
