<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_color_extractor</name>
  <version>0.0.5</version>
  <description>The image_recognition_color_extractor package</description>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>
  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-lint</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
