<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_jetson</name>
  <version>0.0.5</version>
  <description>The image_recognition_jetson package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_recognition_msgs</depend>
  <depend>image_recognition_util</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>python-catkin-lint</test_depend>
</package>
