<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_msgs</name>
  <version>0.0.5</version>
  <description>The image_recognition_msgs package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>python-catkin-lint</test_depend>
</package>
