<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_recognition_msgs</name>
  <version>0.0.5</version>
  <description>The image_recognition_msgs package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>
</package>
