<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_openface</name>
  <version>0.0.5</version>
  <description>The image_recognition_openface package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>image_recognition_util</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <test_depend>python-catkin-lint</test_depend>
</package>
