<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_openpose</name>
  <version>0.0.5</version>
  <description>ROS Wrapper for the openpose software package. Exposes a service and topic interface.</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-lint</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
